log_output/manifests/split-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: writer-container
        image: yonggsnap/writer-log-output:1.1
        volumeMounts:
        - name: log-volume
          mountPath: /usr/src/app/files
      - name: reader-container
        image: yonggsnap/reader-log-output:1.1
        volumeMounts:
        - name: log-volume
          mountPath: /usr/src/app/files
      volumes:
      - name: log-volume
        emptyDir: {}
